Fixed spacingn for page content yield

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -1,7 +1,7 @@
 @import 'variables'
 
 html,body
-  height: 100%
+  height: 100vh
 
 #wrap
   position: relative
@@ -11,6 +11,10 @@ html,body
   padding: 0 0 $footer-height
 
 #main-container
+  margin: 0px
+  position: fixed
+  min-width: 100%
+  min-height: 100vh
   padding-top: 70px
 
 #footer
